--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -92,7 +92,7 @@ BEGIN
             VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "fintech_bridge" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "fintech_bridge" "\0"
+            VALUE "InternalName", "com.debra.fintechBridge" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "fintech_bridge.exe" "\0"
             VALUE "ProductName", "fintech_bridge" "\0"
