--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_spinkit: ^5.2.1
   font_awesome_flutter: ^10.8.0
+  flutter_local_notifications: ^19.0.0
 
 flutter_launcher_icons:
   android: true
