--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   font_awesome_flutter: ^10.8.0
   syncfusion_flutter_datepicker: ^28.2.12
+  percent_indicator: ^4.2.4
 
 flutter_launcher_icons:
   android: true
